adding the html template to packages

--- a/releng/server-all/.settings/org.eclipse.wst.common.component
+++ b/releng/server-all/.settings/org.eclipse.wst.common.component
@@ -254,6 +254,9 @@
         <dependent-module archiveName="dirigible-template-database-view-3.1.0-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/Template - Database View/Template - Database View">
             <dependency-type>uses</dependency-type>
         </dependent-module>
+        <dependent-module archiveName="dirigible-template-html-3.1.0-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/Template - HTML/Template - HTML">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <dependent-module archiveName="dirigible-resources-themes-3.1.0-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/Resources - Themes/Resources - Themes">
             <dependency-type>uses</dependency-type>
         </dependent-module>
