Fix #191 [Template] Extension View

--- a/templates/pom.xml
+++ b/templates/pom.xml
@@ -44,6 +44,7 @@
 		<module>template-bookstore</module>
 		<module>template-job</module>
 		<module>template-listener</module>
+		<module>template-extension-view</module>
 	</modules>
 
 	<profiles>
