Fix #192 [Template] Extension Perspective

--- a/templates/pom.xml
+++ b/templates/pom.xml
@@ -45,6 +45,7 @@
 		<module>template-job</module>
 		<module>template-listener</module>
 		<module>template-extension-view</module>
+		<module>template-extension-perspective</module>
 	</modules>
 
 	<profiles>
